--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             </div>
                             
                             <!-- Menu Items -->
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="/">
                                 <div class="sb-nav-link-icon fs-5"><i class="fi fi-sr-home"></i></div>
                                 Dashboard
                             </a>
@@ -102,7 +102,7 @@
                         <!-- Breadcrumb -->
                         <nav aria-label="breadcrumb" class="mb-3 mt-4">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="/index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="/">Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
                             </ol>
                         </nav>
