--- a/update-profile.html
+++ b/update-profile.html
@@ -17,7 +17,7 @@
         <nav class="sb-topnav navbar navbar-expand navbar-dark py-5" style="background-color: #605CA8;">
             <div class="container-fluid">
                 <!-- Navbar Brand -->
-                <a class="navbar-brand ps-3 d-flex align-items-center" href="index.html">
+                <a class="navbar-brand ps-3 d-flex align-items-center" href="/">
                     <div class="bg-white d-flex align-items-center justify-content-center me-2 rounded" style="width: 40px; height: 40px;"></div>
                     <span>Ruang Jenuh</span>
                 </a>
